--- a/package.json
+++ b/package.json
@@ -5,13 +5,17 @@
   "main": "read.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node ./core/read",
-    "dev": "nodemon ./core/read"
+    "start:crud": "npx ts-node ./core/crud.ts",
+    "dev:crud": "nodemon --ext ts,tsx  --exec 'npm run start:crud'"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.8.0",
     "nodemon": "^3.0.1"
+  },
+  "dependencies": {
+    "typescript": "^5.2.2"
   }
 }
